welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value i
    if (lookingFor==nums(i)){
                         ^